# smolagents-course

./: .gitignore  .windsurfrules  README.md  agent-with-another-mcp.py  agent-with-mcp.py  agent-with-monitor.py  agent-with-ui.py  first-agent.py  main.py  multi-agents.py  pyproject.toml  share-agents.py
PROMPTS/: Memory prompts  chat mgmt memory  new-chat.md  prompt.md
